# soyuz

./: .gitignore  0x10c.cabal  DCPU16-Assembler-Optimizer.html  DCPU16-Assembler-Parser.html  DCPU16-Assembler-Printer.html  DCPU16-Assembler.html  DCPU16-Assembly-Optimizer.html  DCPU16-Assembly-Parser.html  DCPU16-Assembly-Printer.html  DCPU16-Disassembler.html  DCPU16-Hex.html  DCPU16-Instructions-MachineCode.html  DCPU16-Instructions-Size.html  DCPU16-Instructions-Time.html  DCPU16-Instructions.html  LICENSE  Main.hs  README  README.md  Test.hs  doc-index.html  index-frames.html  index.html  mini_DCPU16-Assembler-Optimizer.html  mini_DCPU16-Assembler-Parser.html  mini_DCPU16-Assembler-Printer.html  mini_DCPU16-Assembler.html  mini_DCPU16-Assembly-Optimizer.html  mini_DCPU16-Assembly-Parser.html  mini_DCPU16-Assembly-Printer.html  mini_DCPU16-Disassembler.html  mini_DCPU16-Hex.html  mini_DCPU16-Instructions-MachineCode.html  mini_DCPU16-Instructions-Size.html  mini_DCPU16-Instructions-Time.html  mini_DCPU16-Instructions.html  scan.css  scan.html  soyuz.cabal
DCPU16/: Assembler.hs  Disassembler.hs  Hex.hs  Instructions.hs  Parser.hs
DCPU16/Assembler/: Optimizer.hs  Parser.hs  Printer.hs
DCPU16/Assembly/: Disassembler.hs  Optimizer.hs  Parser.hs  Printer.hs
DCPU16/Instructions/: MachineCode.hs  Size.hs  Time.hs
