name: 0x10c
version: 0.0.0
license: MIT
author:	Alex Kropivny <alex.kropivny@gmail.com>
maintainer:	Alex Kropivny <alex.kropivny@gmail.com>
homepage: https://github.com/amtal/0x10c
stability: Experimental
category: Compilers/Interpreters
synopsis: DCPU-16 implementation for Notch's 0x10c game.
description:
        Implementation of the DCPU-16 architecture for Notch's upcoming space game, 0x10c.
        .
        Meant to be a library for implementing powerful tools. As demonstrations, contains
        a command-line optimizing assembler, disassembler, and debugging interpreter.
build-type: Simple
cabal-version: >= 1.4
license-file: LICENSE

extra-source-files:
    NOTES

flag split-base

library
  exposed-modules:
        DCPU16.Assembler.Parser
        DCPU16.Assembler.Printer
        DCPU16.Instructions
        DCPU16.Instructions.Size
        DCPU16.Instructions.Time
  build-depends:	base >= 4 && < 5, vector, QuickCheck, uniplate, cereal, bytestring, trifecta, pretty
